--- a/styles/main.css
+++ b/styles/main.css
@@ -147,9 +147,11 @@ nav {
   background-color: #312F2F;
   height: 80vh; }
   .campsite-view_main-box .review-box {
-    padding: 15px; }
+    padding: 15px;
+    height: 50%; }
   .campsite-view_main-box .bottom-box {
-    padding: 15px; }
+    padding: 15px;
+    height: 50%; }
 
 .bottom-box img {
   height: 100%;
@@ -174,7 +176,7 @@ nav {
   height: 600px; }
 
 #map {
-  height: 300px;
+  height: 250px;
   width: 100%; }
 
 .form-group label {
