--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ nav {
   width: 100%;
   margin: 0;
   padding: 0;
-  height: 100%; }
+  height: 60vh; }
   .home-container .park-box {
     background: url(http://i2.cdn.cnn.com/cnnnext/dam/assets/160129105442-nationalparks-1-super-169.jpg) no-repeat center center;
     background-size: cover; }
@@ -75,7 +75,7 @@ nav {
 
 .bgr-box-home {
   background-color: #1F445F;
-  height: 100vh;
+  height: 60vh;
   width: 100%;
   margin: 0;
   overflow: auto; }
