--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -36,7 +36,7 @@
                     	<a ng-click="editingComment = true" ng-show="!editingComment">
                     		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                   		</a>
-                  		<a ng-click="editingComment = false" ng-show="editingComment">
+                  		<a ng-click="editingComment = false; editComment(comment)" ng-show="editingComment">
                     		<button class="btn btn-default btn-accent">Save Changes</button>
                   		</a>
                     	<a ng-click="deleteComment(comment.commentId)">
