--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -26,33 +26,10 @@
     <div class="col-md-8 campsite-view_main-box container" ng-show="!editing">
         <div class="row review-box">
             <p>{{campsite.review}}</p>
-            <a ng-click="comments = true" ng-show="!comments">View Comments</a>
+            <!-- <a ng-click="comments = true" ng-show="!comments">View Comments</a> -->
         </div>
         <div class="row bottom-box">
-            <div class="comment-box" ng-show="comments">
-                <div ng-repeat="comment in commentList">
-                    <h3>{{comment.text}}
-                    	<input ng-show="editingComment" type="text" class="form-control" placeholder="Features" ng-model="comment.text" />
-                    	<a ng-click="editingComment = true" ng-show="!editingComment">
-                    		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                  		</a>
-                  		<a ng-click="editingComment = false; editComment(comment)" ng-show="editingComment">
-                    		<button class="btn btn-default btn-accent">Save Changes</button>
-                  		</a>
-                    	<a ng-click="deleteComment(comment.commentId)">
-                    		<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                  		</a>
-                    </h3>
-                    <p>- {{comment.creator}}</p>
-                </div>
-                <div class="">
-                    <label>Write a comment</label>
-                    <input type="text" class="form-control" placeholder="Features" ng-model="newComment.text" />
-                    <button class="btn btn-primary btn-default" ng-click="addComment(newComment)">Save</button>
-                </div>
-                <a ng-click="comments = false">Hide Comments</a>
-            </div>
-            <div class="image-map" ng-show="!comments">
+            <div class="image-map">
                 <div class="col-md-6">
                     <img class="uploadedImage" src="data:{{campsite.image.filetype}};base64,{{campsite.image.base64code}}">
                 </div>
@@ -60,6 +37,29 @@
                     <div id="map"></div>
                 </div>
             </div>
+        </div>
+        <div class="row comment-box">
+            <div ng-repeat="comment in commentList">
+                <h5>{{comment.text}}
+                    	<input ng-show="editingComment" type="text" class="form-control" placeholder="Features" ng-model="comment.text" />
+                    	<a ng-click="editingComment = true" ng-show="!editingComment">
+                    		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                  		</a>
+                  		<a ng-click="editingComment = false; editComment(comment)" ng-show="editingComment">
+                    		<button class="btn btn-default btn-accent">Save Changes</button>
+                  		</a>
+                    	<a ng-click="deleteComment(comment.commentId)" ng-if="uName = comment.creator">
+                    		<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                  		</a>
+                    </h5>
+                <p>- {{comment.creator}}</p>
+            </div>
+            <div class="">
+                <label>Write a comment</label>
+                <input type="text" class="form-control" placeholder="Features" ng-model="newComment.text" />
+                <button class="btn btn-primary btn-default" ng-click="addComment(newComment)">Save</button>
+            </div>
+            <!-- <a ng-click="comments = false">Hide Comments</a> -->
         </div>
     </div>
     <div class="col-md-8">
