--- a/styles/main.css
+++ b/styles/main.css
@@ -138,7 +138,7 @@ nav {
     color: white; }
 
 .campsite-view_infobox {
-  height: 80vh;
+  height: 100%;
   color: white;
   border: none;
   background-color: #312F2F; }
@@ -146,20 +146,25 @@ nav {
 .campsite-view_main-box {
   color: white;
   background-color: #312F2F;
-  height: 80vh; }
+  height: 100%;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
   .campsite-view_main-box .review-box {
-    padding: 15px;
-    height: 20%;
-    overflow: auto; }
+    padding: 15px; }
     .campsite-view_main-box .review-box p {
       font-size: 15px; }
   .campsite-view_main-box .comment-box {
-    padding: 15px;
-    height: 35%;
+    margin: 10px;
+    padding: 10px;
+    background-color: #555151;
     overflow: auto; }
+    .campsite-view_main-box .comment-box input {
+      width: 400px;
+      margin: 0px; }
   .campsite-view_main-box .bottom-box {
-    padding: 15px;
-    height: 35%; }
+    padding: 15px; }
 
 .bottom-box img {
   height: 100%;
@@ -168,6 +173,9 @@ nav {
 
 .input-box input {
   max-width: 300px; }
+
+.boxy-inline {
+  display: inline-block; }
 
 .uploadedImage {
   height: 140px;
