--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -39,8 +39,12 @@
             </div>
         </div>
         <div class="row comment-box">
+            <div class="">
+                <input type="text" class="" placeholder="Write a comment..." ng-model="newComment.text" />
+                <button class="btn btn-default btn-accent boxy-inline" ng-click="addComment(newComment)">Submit</button>
+            </div>
             <div ng-repeat="comment in commentList">
-                <h5>{{comment.text}}
+                <h4>{{comment.creator}}  <span class="comment-text">{{comment.text}}</span>
                     	<input ng-show="editingComment" type="text" class="form-control" placeholder="Features" ng-model="comment.text" />
                     	<a ng-click="editingComment = true" ng-show="!editingComment">
                     		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -51,13 +55,7 @@
                     	<a ng-click="deleteComment(comment.commentId)" ng-if="uName = comment.creator">
                     		<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                   		</a>
-                    </h5>
-                <p>- {{comment.creator}}</p>
-            </div>
-            <div class="">
-                <label>Write a comment</label>
-                <input type="text" class="form-control" placeholder="Features" ng-model="newComment.text" />
-                <button class="btn btn-primary btn-default" ng-click="addComment(newComment)">Save</button>
+                </h4>
             </div>
             <!-- <a ng-click="comments = false">Hide Comments</a> -->
         </div>
