--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -23,51 +23,60 @@
     </div>
     <div class="add-campsite" ng-show="addingCampsite">
         <form class="form-group">
-            <div class="">
-                <label>Campsite Name</label>
-                <input type="text" class="form-control" placeholder="Campsite Name" ng-model="newCampsite.campsiteName" ng-required="required" />
+            <div class="container">
+                <div class="col-md-6">
+                    <div class="">
+                        <label>Campsite Name</label>
+                        <input type="text" class="form-control" placeholder="Campsite Name" ng-model="newCampsite.campsiteName" ng-required="required"
+                        />
+                    </div>
+                    <div class="Area">
+                        <label>Area</label>
+                        <input type="text" class="form-control" placeholder="Area" ng-model="newCampsite.area" ng-required="required" />
+                    </div>
+                    <div class="">
+                        <label>Type</label>
+                        <input type="text" class="form-control" placeholder="Type" ng-model="newCampsite.type" />
+                    </div>
+                    <div class="">
+                        <label>Fee</label>
+                        <input type="text" class="form-control" placeholder="Fee" ng-model="newCampsite.fee" />
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="">
+                        <label>Latitude</label>
+                        <input type="text" class="form-control" placeholder="Latitude" ng-model="newCampsite.latitude" />
+                    </div>
+                    <div class="">
+                        <label>Longitude</label>
+                        <input type="text" class="form-control" placeholder="Longitude" ng-model="newCampsite.longitude" />
+                    </div>
+                    <div class="">
+                        <label>Bathrooms</label>
+                        <input type="text" class="form-control" placeholder="Bathrooms" ng-model="newCampsite.bathrooms" />
+                    </div>
+                    <div class="">
+                        <label>Features</label>
+                        <input type="text" class="form-control" placeholder="Features" ng-model="newCampsite.features" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group">
+                        <label for="file">Image</label>
+                        <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
+                        <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
+                    </div>
+                    <div class="">
+                        <label>Review</label>
+                        <input type="text" class="form-control" placeholder="Write a review" ng-model="newCampsite.review" />
+                    </div>
+                    <button class="btn btn-default" ng-click="addingCampsite = false; createNewCampsite()">Save</button>
+                </div>
             </div>
-            <div class="Area">
-                <label>Area</label>
-                <input type="text" class="form-control" placeholder="Area" ng-model="newCampsite.area" ng-required="required" />
-            </div>
-            <div class="">
-                <label>Type</label>
-                <input type="text" class="form-control" placeholder="Type" ng-model="newCampsite.type" />
-            </div>
-            <div class="">
-                <label>Latitude</label>
-                <input type="text" class="form-control" placeholder="Latitude" ng-model="newCampsite.latitude" />
-            </div>
-            <div class="">
-                <label>Longitude</label>
-                <input type="text" class="form-control" placeholder="Longitude" ng-model="newCampsite.longitude" />
-            </div>
-            <div class="">
-                <label>Fee</label>
-                <input type="text" class="form-control" placeholder="Fee" ng-model="newCampsite.fee" />
-            </div>
-            <div class="">
-                <label>Bathrooms</label>
-                <input type="text" class="form-control" placeholder="Bathrooms" ng-model="newCampsite.bathrooms" />
-            </div>
-            <div class="">
-                <label>Features</label>
-                <input type="text" class="form-control" placeholder="Features" ng-model="newCampsite.features" />
-            </div>
-            <div class="form-group">
-                <label for="file">Image</label>
-                <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
-                <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
-            </div>
-            <div class="">
-                <label>Review</label>
-                <input type="text" class="form-control" placeholder="Write a review" ng-model="newCampsite.review" />
-            </div>
-            <button class="btn btn-default" ng-click="addingCampsite = false; createNewCampsite()">Save</button>
         </form>
     </div>
-    <div class="campsites-box" ng-hide="editing; addingCampsite">
+    <div class="campsites-box" ng-hide="editing == true || addingCampsite == true">
         <div ng-repeat="campsite in campsites">
             <div class="col-md-4">
                 <div class="panel panel-default park_view--campsite-card">
@@ -100,7 +109,7 @@
             <div class="">
                 <label>Longitude</label>
                 <input type="text" class="form-control" placeholder="Longitude" ng-model="editedPark.longitude" />
-            </div>   
+            </div>
             <!-- <div class="form-group">
                 <label for="exampleInputFile">Image</label>
                 <input type="file" id="exampleInputFile" ng-model="editedPark.image">
