--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,23 +52,6 @@ nav {
     }
 }
 
-// .login-wrapper {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: center;
-//     &_left {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         border: 1px solid black;
-//     }
-//     &_right {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         border: 1px solid black;
-//     }
-// }
 .divider {
     width: 100%;
     height: 10px;
@@ -108,7 +91,7 @@ nav {
 
 .bgr-box-primary {
     background-color: $primary;
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     margin: 0;
     padding-top: 2%;
@@ -213,6 +196,14 @@ nav {
     color: white;
     border: none;
     background-color: $secondary;
+    p{
+        color: $accent;
+        font-weight: bold;
+    }
+    span{
+        color: white;
+        font-size: 12px;
+    }
 }
 
 .campsite-view_main-box {
@@ -222,7 +213,7 @@ nav {
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     .review-box {
         padding: 15px;
         //height: 20%;
@@ -232,7 +223,7 @@ nav {
         }
     }
     .comment-box {
-        margin: 10px;
+        margin: 5px;
         padding: 10px;
         //height: 35%;
         background-color: #555151;
