Added map to newCampsite form

--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -66,6 +66,8 @@
                         <label for="file">Image</label>
                         <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
                         <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
+                        <div id="blankMap"></div>
+
                     </div>
                     <div class="">
                         <label>Review</label>
