--- a/sass/main.scss
+++ b/sass/main.scss
@@ -290,6 +290,13 @@ nav {
     width: 100%;
 }
 
+
+#blankMap {
+    height: 250px;
+    //max-height: 50%;
+    width: 400px;
+}
+
 .form-group label {
     color: white;
 }
