Markers are now used to set & edit latitude & longitude on all views

--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -107,6 +107,7 @@
                                 <label for="exampleInputFile">Image</label>
                                 <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
                                 <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
+                                <div id="editMap"></div>
                             </div>
                             <div class="">
                                 <label>Review</label>
