Fixed CSS links

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,5 +1,5 @@
 <div ng-controller="NavCtrl">
-    <nav ng-class="{'nav-test': tallNav}" style="background: url(https://static.pexels.com/photos/473778/pexels-photo-473778.jpeg) no-repeat center center; background-size: cover;" class="navbar navbar-default" ng-controller="NavCtrl">
+    <nav ng-class="{'nav-test': tallNav}" style="background: url(https://www.go4travelblog.com/wp-content/uploads/2016/01/Great-Smoky-Mountains-National-Park.jpg) no-repeat center center; background-size: cover;" class="navbar navbar-default" ng-controller="NavCtrl">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
