--- a/partials/home-view.html
+++ b/partials/home-view.html
@@ -1,10 +1,10 @@
 <div class="divider"></div>
 <div class="bgr-box-home">
-    <div class="container home-container">
-        <div class="col-md-6 home_container-boxes park-box">
+    <div class="home-container">
+        <div class="home_container-boxes park-box">
             <a ng-href="#!/list">Parks</a>
         </div>
-        <div class="col-md-6 home_container-boxes campsite-box">
+        <div class="home_container-boxes campsite-box">
             <a ng-href="#!/search">Search</a>
         </div>
     </div>
