--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -1,4 +1,4 @@
-<div class="bgr-box-primary container">
+<div class="bgr-box-primary">
     <div class="park-title-box">
         <h3>{{park.name}}</h3>
         <p>{{park.city}}, {{park.state}}</p>
