--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,32 +1,26 @@
 <div ng-controller="NavCtrl">
-    <script>
-        $(document).ready(function () {
-            $(".button-collapse").sideNav();
-        })
-    </script>
     <nav ng-class="{'nav-test': tallNav}" style="background: url(https://www.go4travelblog.com/wp-content/uploads/2016/01/Great-Smoky-Mountains-National-Park.jpg) no-repeat center center; background-size: cover;"
         class="navbar navbar-default" ng-controller="NavCtrl">
-        <div class="nav-wrapper">
+        <div class="nav-flex">
             <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="brand-logo trek-logo" href="#">Trek</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down" ng-if="user.uid">
+                <a class="trek-logo" href="">Trek</a>
+                <!-- <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> -->
+                <ul class="nav-items-box right" ng-if="user.uid">
+                    <li><a class="nav-item" href="#!/">Home</a></li>
                     <li><a class="nav-item" href="#!/list">Parks</a></li>
                     <li><a class="nav-item" href="#!/campsite_view">Campsites</a></li>
                     <li><a class="nav-item" href="#!/logout">Logout</a></li>
                 </ul>
-                <ul class="side-nav" id="mobile-demo" ng-if="user.uid">
+                <!-- <ul class="side-nav" id="mobile-demo" ng-if="user.uid">
                     <li><a class="nav-item" href="#!/list">Parks</a></li>
                     <li><a class="nav-item" href="#!/campsite_view">Campsites</a></li>
                     <li><a class="nav-item" href="#!/logout">Logout</a></li>
-                </ul>
+                </ul> -->
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="">
 
                 <!-- <ul class="nav navbar-nav navbar-right" ng-if="!user.uid">
                     <li><a href="#!/auth">Authenticate</a></li>
                 </ul> -->
-            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
