--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,27 @@
 @import "colors";
 nav {
-    height: 100px;
+    height: 150px;
     margin-bottom: 0;
+}
+
+.nav-flex{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
 }
 
 .trek-logo {
     font-size: 3rem !important;
+    font-family: 'Rubik Mono One', sans-serif;
     margin: 20px;
+    padding: 5px 10px !important;
+    background-color: #1F445F; 
+    text-decoration: none;
+    &:hover, &:visited, &:active{
+        text-decoration: none;
+    }
 }
 
 .navlist {
@@ -38,8 +53,28 @@ nav {
     color: white;
 }
 
+.nav-items-box{
+    margin-top: 1.5%;
+}
+
 .nav-item {
     color: white !important;
+    font-family: 'Rubik Mono One', sans-serif;
+    flex-grow: 1;
+    
+}
+
+@media (max-width: 420px) {
+    .nav{ 
+        height: 170px;
+    }
+    .nav-items-box{
+        margin-top: 0;
+    }
+    .nav-item{
+        font-size: 10px;
+        padding: 5px;
+    }
 }
 
 .login-box {
@@ -68,10 +103,17 @@ nav {
     .park-box {
         background: url(http://i2.cdn.cnn.com/cnnnext/dam/assets/160129105442-nationalparks-1-super-169.jpg) no-repeat center center;
         background-size: cover;
+        a{
+            font-family: 'Rubik Mono One', sans-serif;
+            color: $primary;
+        }
     }
     .campsite-box {
         background: url(https://images.theoutbound.com/uploads/1437140402255/wumsmrfw78e/ca76c0961beec40ee34c0e8b7997e543?w=900&h=600&fit=crop) no-repeat center center;
         background-size: cover;
+        a{
+            font-family: 'Rubik Mono One', sans-serif;
+        }
     }
 }
 
